<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    card_view:cardBackgroundColor="@color/colorPrimary"
                    card_view:cardCornerRadius="1dp">


                    <TextView
                        android:layout_marginTop="35dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bree_serif"
                        android:text="@string/terms"
                        android:textColor="@color/white" />


                </android.support.v7.widget.CardView>

            </RelativeLayout>



            <Button
                android:padding="10dp"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tc"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_background" />



        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    card_view:cardBackgroundColor="@color/colorPrimary"
                    card_view:cardCornerRadius="1dp">


                    <TextView
                        android:layout_marginTop="35dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bree_serif"
                        android:text="@string/accounts"
                        android:textColor="@color/white" />


                </android.support.v7.widget.CardView>

            </RelativeLayout>



            <Button
                android:padding="10dp"
                android:layout_margin="15dp"
                android:id="@+id/iv_DriverProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Accounts"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_background" />



        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    card_view:cardBackgroundColor="@color/colorPrimary"
                    card_view:cardCornerRadius="1dp">


                    <TextView
                        android:layout_marginTop="35dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bree_serif"
                        android:text="@string/links"
                        android:textColor="@color/white" />


                </android.support.v7.widget.CardView>

            </RelativeLayout>



            <Button
                android:padding="10dp"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Links to Other Sites"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_background" />



        </android.support.v7.widget.CardView>
      
        

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    card_view:cardBackgroundColor="@color/colorPrimary"
                    card_view:cardCornerRadius="1dp">


                    <TextView
                        android:layout_marginTop="35dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bree_serif"
                        android:text="@string/laws"
                        android:textColor="@color/white" />


                </android.support.v7.widget.CardView>

            </RelativeLayout>



            <Button
                android:padding="10dp"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Governing Laws"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_background" />



        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    card_view:cardBackgroundColor="@color/colorPrimary"
                    card_view:cardCornerRadius="1dp">


                    <TextView
                        android:layout_marginTop="35dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bree_serif"
                        android:text="@string/changes"
                        android:textColor="@color/white" />


                </android.support.v7.widget.CardView>

            </RelativeLayout>



            <Button
                android:padding="10dp"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Changes"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_background" />



        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>
